# FantasyAnalysis

./: FantasyAnalysis.csv  FantasyAnalysis.py  ILPModel.py  README.md  pyproject.toml  sleeper_projections_24 2.numbers  sleeper_projections_24.csv  sleeper_projections_24.numbers
Data/: draft2023.csv  draft2024.csv  sleeper_projections_2022.json  sleeper_projections_2023.json  sleeper_projections_2024.json  sleeper_projections_24.csv  sleeper_stats_2022.json  sleeper_stats_2023.json
