[tool.poetry]
name = "fantasyanalysis"
version = "0.1.0"
description = ""
authors = ["Danny Swift"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.2.2"
matplotlib = "^3.9.2"
lxml = "^5.3.0"
html5lib = "^1.1"
beautifulsoup4 = "^4.12.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
